# clicksignlib

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
clicksignlib/: __init__.py  click_sign.py  run_in_asyncio.py
clicksignlib/adapters/: __init__.py  aiohttp_adapter.py  httpx_adapter.py  irequests.py
clicksignlib/environments/: __init__.py  environment_abc.py  prod_env.py  test_env.py  testing_env.py
clicksignlib/environments/protocols/: ienvironment.py
clicksignlib/handlers/: __init__.py  base_handler.py  config.py  template_handler.py
clicksignlib/handlers/batch_handler/: __init__.py  batch_handler.py
clicksignlib/handlers/document_handler/: __init__.py  document.py  document_handler.py
clicksignlib/handlers/embedded_handler/: __init__.py  embedded_handler.py
clicksignlib/handlers/mixins/: __init__.py  endpoint_mixin.py
clicksignlib/handlers/notification_handler/: __init__.py  notification_handler.py
clicksignlib/handlers/signatory_handler/: __init__.py  auths_type.py  (+2 more)
clicksignlib/utils/: __init__.py  aiohttp_adapter.py  bytes_to_base64.py  calc_hmac_sum.py  payload.py  result.py
tests/: conftest.py  test_clicksignlib.py  test_environments.py  test_mixins.py
tests/adapters/: test_aiohttp_adapter.py
tests/test_handlers/: test_batch_handler.py  test_document.py  test_document_handler.py  test_embedded_handler.py  test_handlers_package.py  test_notification_handler.py  test_signatory_handler.py  test_template.py  test_template_handler.py
tests/utils/: test_bytes_to_base64.py
(+9 files in other folders)
