[tool.poetry]
name = "ClickSignLib"
version = "1.1.9"
description = ""
authors = ["Erick Duarte <erickod@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.21.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
commitizen = "^2.20.0"
pre-commit = "^2.15.0"
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^21.11b1"
pytest-cov = "^3.0.0"
types-requests = "^2.26.0"
asynctest = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
